--- a/style.css
+++ b/style.css
@@ -9,32 +9,85 @@ a:hover {
 }
 
 h1 {
-  margin-top: 24px;
+  margin-top: 16px;
   text-align: center;
 }
 
-#lastbook {
-  padding-top: 148px;
+#books {
+  background-color: rgba(210, 235, 255, 0.5);
+  padding-top: 8px;
 }
 
-#lastbook>h3 {
-  text-align: center;
+#about {
+  padding-top: 8px;
 }
 
-#lastbook-content {
+#contact {
+  background-color: rgba(210, 235, 255, 0.5);
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.social {
+  margin: 0;
   display: flex;
+  justify-content: center;
+  padding: 0;
 }
 
-#lastbook-img {
+.social>li {
+  list-style: none;
+  margin : 8px;
+  font-size: 32px;
+}
+
+#active-book {
+  padding-top: 148px;
+  padding-bottom: 8px;
+}
+
+#active-book>h3 {
+  text-align: center;
+}
+
+.active-book-content {
+  display: flex;
+  margin-top: 16px;
+}
+
+#active-book-img {
   width: 60%;
   height: 40px;
   background-color: #555555;
+  margin-right: 16px;
+}
+
+.card-trip.active-book {
+  opacity: 1;
+}
+
+.card-trip:hover {
+  opacity: 1;
+}
+
+.navbar>.container {
+  align-items: flex-end;
+  justify-content: center;
+  position: relative;
+  height: 132px;
+}
+
+.navbar-brand {
+  position: absolute;
+  left: 8px;
+  z-index: 1000;
 }
 
 /* Le wagon UI Kit */
 .navbar {
   width: 100%;
   position: fixed;
+  z-index: 100;
 }
 
 .navbar-lewagon {
@@ -55,6 +108,7 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
+  padding: 16px 0;
 }
 
 // Smallest device
@@ -93,6 +147,7 @@ h1 {
 }
 
 .card-trip {
+  opacity: 0.8;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
