--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 {
 
 #books-show {
   padding-top: 148px;
-  padding-bottom: 8px;
+  padding-bottom: 16px;
 }
 
 #books-show>.container {
@@ -120,6 +120,7 @@ h1 {
   width: 100%;
   position: fixed;
   z-index: 100;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .navbar-lewagon {
