--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ h1 {
 }
 
 #books-show {
-  padding-top: 148px;
-  padding-bottom: 16px;
+  position: relative;
+  padding: 16px 0;
 }
 
 #books-show>.container {
@@ -56,7 +56,6 @@ h1 {
 
 .book-content {
   display: flex;
-  margin-top: 16px;
   justify-content: space-evenly;
 }
 
@@ -93,13 +92,36 @@ h1 {
   align-items: flex-end;
   justify-content: center;
   position: relative;
-  height: 132px;
+}
+
+.navtabs {
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 0;
 }
 
 .navbar-brand {
-  position: absolute;
-  left: 8px;
   z-index: 1000;
+}
+
+#toggleBtn {
+  display: none;
+  padding: 8px 24px;
+  font-size: 40px;
+  opacity: 0.4;
+  text-align: right;
+  position: relative;
+}
+
+#collapseMenu {
+  position: absolute;
+  right: 0;
+  top: 102px;
+}
+
+#about {
+  scroll-margin-top: 150px ;
 }
 
 /* Le wagon UI Kit */
@@ -118,19 +140,19 @@ h1 {
 
 .navbar {
   width: 100%;
-  position: fixed;
+  position: sticky;
+  top: 0;
   z-index: 100;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  display: grid;
+  grid-template-columns: 1fr 10fr 1fr;
+  grid-gap: 16px;
 }
 
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
   align-items: flex-end;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
 }
 
 .navbar-lewagon .navbar-brand img {
@@ -144,35 +166,101 @@ h1 {
   padding: 16px 0;
 }
 
-// Smallest device
-@media (min-width: 100px) and (max-width: 575px) {
+/* Smallest device */
+@media (max-width: 575px) {
   .cards {
     grid-template-columns: 1fr;
   }
-}
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-  .cards {
-    grid-template-columns: 1fr;
+  .book-content {
+    flex-direction: column;
+  }
+
+  .navbar-lewagon .navbar-brand img {
+    width: 100px;
+  }
+
+  .book-desc {
+    width: 100%;
+    padding-top: 16px;
+  }
+
+  .book-show-img {
+    width: 100%;
+  }
+
+  .navbar {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .navtabs {
+    display: none;
+  }
+
+  #toggleBtn {
+    display: block;
+  }
+
+  #about {
+    scroll-margin-top: 100px ;
   }
 }
 
-// Medium devices (tablets, 768px and up)
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+
+  .book-content {
+    flex-direction: column;
+  }
+
+  .navbar-lewagon .navbar-brand img {
+    width: 100px;
+  }
+
+  .book-desc {
+    width: 100%;
+    padding-top: 16px;
+  }
+
+  .book-show-img {
+    width: 100%;
+  }
+
+  .navbar {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .navtabs {
+    display: none;
+  }
+
+  #toggleBtn {
+    display: block;
+  }
+
+  #about {
+    scroll-margin-top: 100px ;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .cards {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-// Large devices (desktops, 992px and up)
+/* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
-// Extra large devices (large desktops, 1200px and up)
+/* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
